feat(Member): Add and Implement GetMember

--- a/Kfum.Disko.Infrastructure.Database/Kfum.Disko.Infrastructure.Database.csproj
+++ b/Kfum.Disko.Infrastructure.Database/Kfum.Disko.Infrastructure.Database.csproj
@@ -1,20 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="12.6.0"/>
-        <PackageReference Include="HotChocolate.Data" Version="12.6.0"/>
+        <PackageReference Include="FluentNHibernate" Version="3.1.0"/>
+        <PackageReference Include="MySql.Data" Version="8.0.28"/>
+        <PackageReference Include="NHibernate.Caches.CoreMemoryCache" Version="5.7.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Kfum.Disko.Core.Entities\Kfum.Disko.Core.Entities.csproj"/>
         <ProjectReference Include="..\Kfum.Disko.Core\Kfum.Disko.Core.csproj"/>
-        <ProjectReference Include="..\Kfum.Disko.Infrastructure\Kfum.Disko.Infrastructure.csproj"/>
     </ItemGroup>
 
 </Project>
